# koboredux

./: .travis.yml  BUILDDEFS  CMakeLists.txt  INSTALL.md  NOTES  PACKAGEDEFS  README.md  add-full-data  add-full-data.sh  build-packages  build-packages.sh  build-win32-packages  build-win32-packages.sh  buildconfig.h.cmake  cfg-all  cfg-all-demo  clean-all  configure  fix-linux-bz2-package  fix-linux-deb-package  fix-linux-rpm-package  install-audiality2  install-audiality2.sh  install-data  install-demo-data  install-demo-data.sh  install-full-data  install-full-data.sh  install-libs  install-sdl2  install-win32-redist  install-win32-redist.sh  make-all
data/gfx/loader/: header.theme  loader.theme  main.theme
data/gfx/mono/: header.theme  main.theme  mono.theme
data/gfx/redux/: main.theme  redux.theme
data/gfx/tools/: header.theme  main.theme
data/sfx/: master.a2s  music.a2s  oajingle-short.a2s  oajingle.a2s  sfx.a2s  uisfx.a2s
data/sfx/chip/: header.theme  main.a2s  master.a2s  sfx.a2s  uisfx.a2s
data/sfx/loader/: header.theme  main.a2s  oajingle-short.a2s
data/sfx/redux/: k2intro.a2s  krdtitle.a2s  main.a2s  master.a2s  sfx.a2s  uisfx.a2s
icons/: net.olofson.koboredux-demo.desktop  net.olofson.koboredux.desktop
icons/windows/: kobord.rc
linux-bundle/: demo.itch.toml  itch.toml  kobord-demo.sh  kobord.sh  koboredux-demo.desktop  koboredux.desktop  static.demo.itch.toml  static.itch.toml
src/: CMakeLists.txt  campaign.cpp  campaign.h  cfgform.cpp  cfgform.h  cfgparse.cpp  cfgparse.h  config.h  dashboard.cpp  dashboard.h  dbgconsole.cpp  dbgconsole.h  enemies.cpp  enemies.h  enemy.cpp  filemap.cpp  filemap.h  fire.cpp  fire.h  form.cpp  form.h  game.cpp  game.h  gamectl.cpp  gamectl.h  gamestate.cpp  gamestate.h  graphics.cpp  graphics.h  gridtfx.cpp  gridtfx.h  kobo.cpp  kobo.h  kobolog.h  logger.c  logger.h  manage.cpp  manage.h  map.cpp  map.h  (+40 more)
src/gfx/: DO64-0.22.gpl  DO64-0.23.gpl  DO64-0.24.gpl  koboredux-tools.scm
src/gfx/mono/: render-sprites.eel
src/gfx/mono/dashboard/: dashboard-v2.xcf
src/gfx/mono/fonts/: bigfont.xcf  counterfont.xcf  smallfont.xcf
src/gfx/mono/sprites/: bigship.aseprite  bigship.xcf  bmr-pink.aseprite  kobo-mk3s.xcf  missile.aseprite
src/gfxengine/: cs.c  cs.h  filters.c  filters.h  gfxengine.cpp  gfxengine.h  palette.c  palette.h  sofont.cpp  sofont.h  sprite.c  sprite.h  toolkit.cpp  toolkit.h  window.cpp  window.h
src/graphics/: cs.c  cs.h  display.cpp  display.h  filters.c  filters.h  gfxengine.cpp  gfxengine.h  glSDL.c  glSDL.h  palette.c  palette.h  region.c  region.h  sofont.cpp  sofont.h  sprite.c  sprite.h  toolkit.cpp  toolkit.h  vidmodes.c  vidmodes.h  window.cpp  window.h
